write all results to wandb

--- a/experiments/testing.ipynb
+++ b/experiments/testing.ipynb
@@ -26,54 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thread 0: tasks 0-0, i.e. 1 tasks.\n",
-      "Thread 1: tasks 1-1, i.e. 1 tasks.\n",
-      "Thread 2: tasks 2-2, i.e. 1 tasks.\n",
-      "Thread 3: tasks 3-3, i.e. 1 tasks.\n",
-      "Thread 4: tasks 4-4, i.e. 1 tasks.\n",
-      "Thread 5: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 6: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 7: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 8: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 9: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 10: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 11: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 12: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 13: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 14: tasks 5-4, i.e. 0 tasks.\n",
-      "Thread 15: tasks 5-4, i.e. 0 tasks.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "divide_tasks(5, 16)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "20 % 3"
+    "import wandb\n",
+    "\n",
+    "runs = [\"vxvf4i0w\", \"3njns1lq\", \"3g0ak4qs\", \"27jmrhhb\", \"3e03fz07\", ]\n",
+    "\n",
+    "for run in runs:\n",
+    "    api = wandb.Api()\n",
+    "    run = api.run(f\"joasiee/convergence_tests/{run}\")\n",
+    "    run.config[\"downsampling\"] = 3\n",
+    "    run.update()"
    ]
   },
   {
