conv tests multi metric res

--- a/experiments/testing.ipynb
+++ b/experiments/testing.ipynb
@@ -123,6 +123,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "\n",
+    "api = wandb.Api()\n",
+    "entity, project = \"joasiee\", \"convergence_tests\"  # set to your entity and project\n",
+    "runs = api.runs(entity + \"/\" + project)\n",
+    "\n",
+    "for run in runs:\n",
+    "    run.config[\"resolutions\"] = 1\n",
+    "    run.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
