--- a/experiments/testing.ipynb
+++ b/experiments/testing.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,21 +148,21 @@
     "\n",
     "api = wandb.Api()\n",
     "entity, project = \"joasiee\", \"pareto_front\"  # set to your entity and project\n",
-    "runs = api.runs(entity + \"/\" + project)"
+    "runs = api.runs(entity + \"/\" + project, filters={\"state\": {\"$in\": [\"finished\", \"running\"]}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17"
+       "22"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
