wandb batch logging, no more nans

--- a/experiments/testing.ipynb
+++ b/experiments/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +11,11 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tinydb import TinyDB, Query\n",
-    "plt.style.use('seaborn-paper')\n",
+    "plt.style.use('seaborn')\n",
     "\n",
     "api = wandb.Api(timeout=30)\n",
     "entity = \"joasiee\"\n",
     "optims = [\"GOMEA\", \"AdaptiveStochasticGradientDescent\"]\n",
-    "\n",
-    "if not os.path.exists(\"tinydb\"):\n",
-    "    os.makedirs(\"tinydb\")\n",
     "\n",
     "def get_runs(project, filters={}):\n",
     "    return api.runs(entity + \"/\" + project, filters=filters)\n",
@@ -47,130 +43,12 @@
     "        history_r = history[columns]\n",
     "        res[\"resolutions\"].append(history_r.loc[indices].to_dict())\n",
     "    \n",
-    "    return res\n",
-    "\n",
-    "def save_experiment_data_locally(project):\n",
-    "    runs = get_runs(project)\n",
-    "    names, configs, histories = get_finished_run_data(runs)\n",
-    "    db = TinyDB(f\"tinydb/{project}.db\")\n",
-    "    db.drop_tables()\n",
-    "    for name, config, history in zip(names, configs, histories):\n",
-    "        db.insert(run_to_dict(name, config, history))\n",
-    "\n",
-    "def load_db(project):\n",
-    "    db = TinyDB(f\"tinydb/{project}.db\")\n",
-    "    return db"
+    "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xarray as xr\n",
-    "\n",
-    "runs = get_runs(\"convergence_experiment\")\n",
-    "run = runs[-1]\n",
-    "df = pd.DataFrame.from_dict(run.scan_history())\n",
-    "xarr = xr.DataArray(df)\n",
-    "xarr.attrs = run.config\n",
-    "xarr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xarr.loc[:, \"R0/metric\"].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = load_db(\"convergence_experiment\")\n",
-    "\n",
-    "def get_metric_mean_std(runs):\n",
-    "    metric_values = np.array(\n",
-    "        [\n",
-    "            np.array(list(run[\"resolutions\"][0][\"R0/metric\"].values())).astype(\n",
-    "                np.float64\n",
-    "            )\n",
-    "            for run in runs\n",
-    "        ]\n",
-    "    )\n",
-    "    return np.median(metric_values, 0), np.std(metric_values, 0)\n",
-    "\n",
-    "\n",
-    "def get_mean_runtimes(runs):\n",
-    "    runtimes = np.array(\n",
-    "        [\n",
-    "            np.nancumsum(\n",
-    "                np.array(list(run[\"resolutions\"][0][\"R0/time[ms]\"].values())).astype(\n",
-    "                    np.float64\n",
-    "                )\n",
-    "            )\n",
-    "            for run in runs\n",
-    "        ]\n",
-    "    )\n",
-    "    return np.median(runtimes, 0)\n",
-    "\n",
-    "\n",
-    "def plot_runs(runs, label, instance):\n",
-    "    x = get_mean_runtimes(runs)\n",
-    "    y, error = get_metric_mean_std(runs)\n",
-    "    plt.title(f\"Instance: {instance}\", fontsize=14)\n",
-    "    plt.plot(x, y, linewidth=2, label=label)\n",
-    "    plt.fill_between(x, y - 2 * error, y + 2 * error, alpha=0.3)\n",
-    "    # plt.yscale(\"log\")\n",
-    "    plt.xlabel(\"Runtime [ms]\", fontsize=12)\n",
-    "    plt.ylabel(\"MSE\", fontsize=12)\n",
-    "    plt.legend(prop={\"size\": 16})\n",
-    "    plt.text(x[-1], y[-1], f' - {y[-1]}', fontsize=12)\n",
-    "\n",
-    "\n",
-    "def plot_instances(instances=[16, 17, 14]):\n",
-    "    for instance in instances:\n",
-    "        asgd_runs = db.search(\n",
-    "            (Query().config.Optimizer == \"AdaptiveStochasticGradientDescent\")\n",
-    "            & (Query().config.Instance == instance)\n",
-    "        )\n",
-    "        gomea_full_runs = db.search(\n",
-    "            (Query().config.Optimizer == \"GOMEA\")\n",
-    "            & (~Query().config.PartialEvaluations.exists())\n",
-    "            & (Query().config.Instance == instance)\n",
-    "        )\n",
-    "        gomea_partial_runs = db.search(\n",
-    "            (Query().config.Optimizer == \"GOMEA\")\n",
-    "            & (Query().config.PartialEvaluations.exists())\n",
-    "            & (Query().config.Instance == instance)\n",
-    "        )\n",
-    "\n",
-    "        plt.figure(figsize=(12, 8))\n",
-    "        plot_runs(asgd_runs, \"ASGD\", instance)\n",
-    "        plot_runs(gomea_full_runs, \"GOMEA-Full\", instance)\n",
-    "\n",
-    "        plt.figure(figsize=(12, 8))\n",
-    "        plot_runs(gomea_partial_runs, \"GOMEA-Partial\", instance)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_instances()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,236 +57,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>_step</th>\n",
-       "      <th>R0.missedpixels</th>\n",
-       "      <th>R0.||gradient||</th>\n",
-       "      <th>_runtime</th>\n",
-       "      <th>R0.time[ms]</th>\n",
-       "      <th>R0.3a:time</th>\n",
-       "      <th>R0.3b:stepsize</th>\n",
-       "      <th>R0.metric</th>\n",
-       "      <th>_timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.979167</td>\n",
-       "      <td>0.665054</td>\n",
-       "      <td>12</td>\n",
-       "      <td>9.8</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.480747</td>\n",
-       "      <td>5.937500</td>\n",
-       "      <td>1649948191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.338915</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.480747</td>\n",
-       "      <td>5.708196</td>\n",
-       "      <td>1649948191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.189214</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>5.231622</td>\n",
-       "      <td>5.109480</td>\n",
-       "      <td>1649948191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.625000</td>\n",
-       "      <td>0.391677</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>5.234001</td>\n",
-       "      <td>2.859657</td>\n",
-       "      <td>1649948191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.317176</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>1.99</td>\n",
-       "      <td>5.006337</td>\n",
-       "      <td>2.490119</td>\n",
-       "      <td>1649948191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997</th>\n",
-       "      <td>1997</td>\n",
-       "      <td>44.250000</td>\n",
-       "      <td>0.004086</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.480747</td>\n",
-       "      <td>0.310725</td>\n",
-       "      <td>1649948192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1998</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>44.250000</td>\n",
-       "      <td>0.004085</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.480747</td>\n",
-       "      <td>0.310634</td>\n",
-       "      <td>1649948192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1999</th>\n",
-       "      <td>1999</td>\n",
-       "      <td>44.375000</td>\n",
-       "      <td>0.004093</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.480747</td>\n",
-       "      <td>0.311240</td>\n",
-       "      <td>1649948192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>44.375000</td>\n",
-       "      <td>0.004093</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.480747</td>\n",
-       "      <td>22.360576</td>\n",
-       "      <td>1649948192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>44.375000</td>\n",
-       "      <td>0.004093</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.480747</td>\n",
-       "      <td>22.360576</td>\n",
-       "      <td>1649948192</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2002 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      _step  R0.missedpixels  R0.||gradient||  _runtime  R0.time[ms]  \\\n",
-       "0         0         0.979167         0.665054        12          9.8   \n",
-       "1         1         0.000000         0.338915        12          0.4   \n",
-       "2         2         0.000000         1.189214        12          0.5   \n",
-       "3         3         1.625000         0.391677        12          1.9   \n",
-       "4         4         0.000000         0.317176        12          0.7   \n",
-       "...     ...              ...              ...       ...          ...   \n",
-       "1997   1997        44.250000         0.004086        13          0.4   \n",
-       "1998   1998        44.250000         0.004085        13          0.3   \n",
-       "1999   1999        44.375000         0.004093        13          0.4   \n",
-       "2000   2000        44.375000         0.004093        13          3.3   \n",
-       "2001   2000        44.375000         0.004093        13          3.3   \n",
-       "\n",
-       "      R0.3a:time  R0.3b:stepsize  R0.metric  _timestamp  \n",
-       "0           0.00        5.480747   5.937500  1649948191  \n",
-       "1           0.00        5.480747   5.708196  1649948191  \n",
-       "2           1.00        5.231622   5.109480  1649948191  \n",
-       "3           0.99        5.234001   2.859657  1649948191  \n",
-       "4           1.99        5.006337   2.490119  1649948191  \n",
-       "...          ...             ...        ...         ...  \n",
-       "1997        0.00        5.480747   0.310725  1649948192  \n",
-       "1998        0.00        5.480747   0.310634  1649948192  \n",
-       "1999        0.00        5.480747   0.311240  1649948192  \n",
-       "2000        0.00        5.480747  22.360576  1649948192  \n",
-       "2001        0.00        5.480747  22.360576  1649948192  \n",
-       "\n",
-       "[2002 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "histories[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1649948178_examples_1_adaptivestochasticgradientdescent_0a39baea'"
+       "0      92.2\n",
+       "1      59.1\n",
+       "2      79.5\n",
+       "3     108.2\n",
+       "4      38.2\n",
+       "5      29.9\n",
+       "6        39\n",
+       "7      75.1\n",
+       "8      47.0\n",
+       "9      31.9\n",
+       "10     35.4\n",
+       "11     32.0\n",
+       "12     31.4\n",
+       "13     32.7\n",
+       "14     30.2\n",
+       "15     30.2\n",
+       "16      NaN\n",
+       "17     30.5\n",
+       "18     30.7\n",
+       "19     32.0\n",
+       "20     30.8\n",
+       "21     36.7\n",
+       "22     29.9\n",
+       "23     29.1\n",
+       "24      NaN\n",
+       "25     30.2\n",
+       "26     28.8\n",
+       "27     32.1\n",
+       "28     29.7\n",
+       "29     29.4\n",
+       "30     31.2\n",
+       "31     27.9\n",
+       "32     28.4\n",
+       "33     34.3\n",
+       "34     30.1\n",
+       "35     30.7\n",
+       "36      NaN\n",
+       "37     27.0\n",
+       "38     34.1\n",
+       "39     28.9\n",
+       "40     29.0\n",
+       "41     35.9\n",
+       "42     27.3\n",
+       "43     27.2\n",
+       "44     31.5\n",
+       "45     26.3\n",
+       "46     26.8\n",
+       "47     34.3\n",
+       "48     28.7\n",
+       "49     26.7\n",
+       "Name: R0/time[ms], dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names[0]"
+    "histories[0][\"R0/time[ms]\"]"
    ]
   },
   {
