watchdog bug fix

--- a/experiments/testing.ipynb
+++ b/experiments/testing.ipynb
@@ -31,6 +31,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asgd_sampling = get_runs_as_dataset(\"sampling_experiment2\", {\"config.Optimizer\": \"AdaptiveStochasticGradientDescent\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
