aggregate dataset tuples and list compatible

--- a/experiments/notebooks/plots.ipynb
+++ b/experiments/notebooks/plots.ipynb
@@ -35,6 +35,80 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridsizes_ds = get_runs_as_dataset(\"gridsizes_16\", {\"state\": \"finished\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 2, 2)\n",
+      "0        2094175.7\n",
+      "1        3221756.4\n",
+      "2        4372097.7\n",
+      "3        5504944.7\n",
+      "4        6635995.0\n",
+      "          ...     \n",
+      "495    571283236.9\n",
+      "496    572476777.4\n",
+      "497    573695915.7\n",
+      "498    574900108.1\n",
+      "499    576082084.2\n",
+      "Name: duration, Length: 500, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = gridsizes_ds.aggregate([\"MeshSize\"], [\"metric\", \"time[ms]\"], val=False)\n",
+    "for i, m in df.groupby(\"MeshSize\", as_index=False):\n",
+    "    print(i)\n",
+    "    m[\"duration\"] = m[\"time[ms]\"].cumsum()\n",
+    "    print(m[\"duration\"])\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        135037.1\n",
+       "1        268703.2\n",
+       "2        388607.1\n",
+       "3        440094.9\n",
+       "4        492124.3\n",
+       "          ...    \n",
+       "495    27787573.2\n",
+       "496    27841056.4\n",
+       "497    27895772.0\n",
+       "498    27948038.0\n",
+       "499    27999388.9\n",
+       "Name: time[ms], Length: 500, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df[\"MeshSize\"] == '(6, 6, 6)'][\"time[ms]\"].cumsum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -554,10 +628,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "5ffe90c35dc2d02d18a35a6906a7f88d9fc2d18308a8b2307b8d2f12b25f6d1d"
+   "hash": "2d2a6e7db805271b0cf909e41ec1d2658bc0cfc8d3a5bab4aa81712494dfdd87"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.2 ('experiments-UJZ0_4XX-py3.9')",
+   "display_name": "Python 3.10.4 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
