--- a/experiments/notebooks/test.ipynb
+++ b/experiments/notebooks/test.ipynb
@@ -2,86 +2,136 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2364/2522071181.py:3: DeprecationWarning: Please use `zoom` from the `scipy.ndimage` namespace, the `scipy.ndimage.interpolation` namespace is deprecated.\n",
+      "  from scipy.ndimage.interpolation import zoom as zoom\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import ndimage\n",
+    "from scipy.ndimage.interpolation import zoom as zoom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nopartial = np.loadtxt(\"data/nopartial.dat\")\n",
-    "partial = np.loadtxt(\"data/partial.dat\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nopartial_set = set()\n",
-    "partial_set = set()\n",
-    "for row in nopartial:\n",
-    "    nopartial_set.add(tuple(row))\n",
-    "for row in partial:\n",
-    "    partial_set.add(tuple(row))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diff = partial_set.difference(nopartial_set)\n",
-    "diff_np = np.array(list(diff))\n",
-    "np.savetxt(\"data/diff.dat\", diff_np)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0,)"
+       "array([[ 0.,  1.,  2.],\n",
+       "       [ 3.,  4.,  5.],\n",
+       "       [ 6.,  7.,  8.],\n",
+       "       [ 9., 10., 11.]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "diff_np.shape"
+    "a = np.arange(12.).reshape((4, 3))\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "array([0.5])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(partial) - len(nopartial)"
+    "ndimage.map_coordinates(a, [[0], [0.5]], order=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9.903249, 27.988744)\n",
+      "(9.862353, 14.270948)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"outputpoints.txt\") as fp:\n",
+    "    lines = fp.readlines()\n",
+    "    for line in lines:\n",
+    "        s = line.split(\";\")[3]\n",
+    "        s = s[s.find(\"[\")+1:s.find(\"]\")].split(\" \")\n",
+    "        idx = (float(s[1]), float(s[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.loadtxt(\"/home/joasiee/instances/learn/landmarks/01_Moving.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "sequence item 0: expected str instance, numpy.float64 found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/joasiee/projects/elastix/experiments/notebooks/test.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Barch/home/joasiee/projects/elastix/experiments/notebooks/test.ipynb#ch0000009vscode-remote?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m y \u001b[39min\u001b[39;00m x:\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Barch/home/joasiee/projects/elastix/experiments/notebooks/test.ipynb#ch0000009vscode-remote?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mjoin(y))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Barch/home/joasiee/projects/elastix/experiments/notebooks/test.ipynb#ch0000009vscode-remote?line=2'>3</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, numpy.float64 found"
+     ]
+    }
+   ],
+   "source": [
+    "for y in x:\n",
+    "    print(\" \".join(y))\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_points = len(x)\n",
+    "with open(\"test.txt\", \"wb\") as file:\n",
+    "    file.write(b\"index\\n\")\n",
+    "    file.write(bytes(str(n_points), encoding='utf-8') + b\"\\n\")\n",
+    "    np.savetxt(file, x, fmt='%f')"
    ]
   },
   {
@@ -94,7 +144,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "2d2a6e7db805271b0cf909e41ec1d2658bc0cfc8d3a5bab4aa81712494dfdd87"
+   "hash": "1f52fffc8ac4531e7d422d5b1d8a72916308024670397ab819a353aa38f4afc6"
   },
   "kernelspec": {
    "display_name": "Python 3.10.4 ('.venv': poetry)",
