tre divergence experiment

--- a/experiments/notebooks/test.ipynb
+++ b/experiments/notebooks/test.ipynb
@@ -89,62 +89,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lm_dir = Path(\"/home/joasiee/instances/learn/landmarks\")\n",
+    "files = lm_dir.glob('*')\n",
+    "for file in files:\n",
+    "    lms = np.loadtxt(file)\n",
     "\n",
-    "x = np.loadtxt(\"/home/joasiee/instances/learn/landmarks/01_Moving.txt\")"
+    "    with open(file, \"wb\") as file:\n",
+    "        n_points = len(lms)\n",
+    "        file.write(b\"index\\n\")\n",
+    "        file.write(bytes(str(n_points), encoding=\"utf-8\") + b\"\\n\")\n",
+    "        np.savetxt(file, lms, fmt='%f')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "sequence item 0: expected str instance, numpy.float64 found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/joasiee/projects/elastix/experiments/notebooks/test.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Barch/home/joasiee/projects/elastix/experiments/notebooks/test.ipynb#ch0000009vscode-remote?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m y \u001b[39min\u001b[39;00m x:\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Barch/home/joasiee/projects/elastix/experiments/notebooks/test.ipynb#ch0000009vscode-remote?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mjoin(y))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Barch/home/joasiee/projects/elastix/experiments/notebooks/test.ipynb#ch0000009vscode-remote?line=2'>3</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, numpy.float64 found"
-     ]
-    }
-   ],
-   "source": [
-    "for y in x:\n",
-    "    print(\" \".join(y))\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_points = len(x)\n",
-    "with open(\"test.txt\", \"wb\") as file:\n",
-    "    file.write(b\"index\\n\")\n",
-    "    file.write(bytes(str(n_points), encoding='utf-8') + b\"\\n\")\n",
-    "    np.savetxt(file, x, fmt='%f')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "1f52fffc8ac4531e7d422d5b1d8a72916308024670397ab819a353aa38f4afc6"
+   "hash": "2d2a6e7db805271b0cf909e41ec1d2658bc0cfc8d3a5bab4aa81712494dfdd87"
   },
   "kernelspec": {
    "display_name": "Python 3.10.4 ('.venv': poetry)",
