crash full eval lms fix

--- a/experiments/notebooks/test.ipynb
+++ b/experiments/notebooks/test.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm_dir = Path(\"/home/joasiee/instances/learn/landmarks\")\n",
+    "lm_dir = Path(\".\")\n",
     "files = lm_dir.glob('*')\n",
     "for file in files:\n",
     "    lms = np.loadtxt(file)\n",
