fix groupby bug

--- a/experiments/notebooks/plots.ipynb
+++ b/experiments/notebooks/plots.ipynb
@@ -37,41 +37,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gridsizes_ds = get_runs_as_dataset(\"gridsizes_16\", {\"state\": \"finished\"})"
+    "gridsizes_ds = get_runs_as_dataset(\"gridsizes_16\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 2, 2)\n",
-      "0        2094175.7\n",
-      "1        3221756.4\n",
-      "2        4372097.7\n",
-      "3        5504944.7\n",
-      "4        6635995.0\n",
-      "          ...     \n",
-      "495    571283236.9\n",
-      "496    572476777.4\n",
-      "497    573695915.7\n",
-      "498    574900108.1\n",
-      "499    576082084.2\n",
-      "Name: duration, Length: 500, dtype: object\n"
+      "('GOMEA', (6, 6, 6))\n",
+      "     _step  _runtime  _timestamp  itnr  3b:distmult 3a:pdpct    metric  \\\n",
+      "0        0        23  1652430119     0     1.006556      100  2.416671   \n",
+      "1        1        39  1652430135     1     1.011704      100  2.219929   \n",
+      "2        2        55  1652430151     2     1.051643      100  1.286487   \n",
+      "3        3        71  1652430167     3     1.064045      100  0.544746   \n",
+      "4        4        87  1652430183     4     1.076685      100  0.431871   \n",
+      "..     ...       ...         ...   ...          ...      ...       ...   \n",
+      "495    495      7839  1652437935   495     1.094087      100  0.056376   \n",
+      "496    496      7854  1652437950   496     1.133407      100  0.056368   \n",
+      "497    497      7869  1652437965   497     1.095659      100  0.056357   \n",
+      "498    498      7885  1652437981   498     1.085424      100  0.056343   \n",
+      "499    499      7900  1652437996   499     1.075683      100  0.056343   \n",
+      "\n",
+      "     missedpixels  time[ms]  \n",
+      "0        0.011390   16108.6  \n",
+      "1        0.011390   15761.7  \n",
+      "2        0.011390   15594.5  \n",
+      "3        0.011390   16125.9  \n",
+      "4        0.011390   15542.6  \n",
+      "..            ...       ...  \n",
+      "495      0.001257   15197.7  \n",
+      "496      0.001257   15312.9  \n",
+      "497      0.001885   15303.5  \n",
+      "498      0.000943   15335.8  \n",
+      "499      0.001728   15306.3  \n",
+      "\n",
+      "[500 rows x 9 columns]\n"
      ]
     }
    ],
    "source": [
-    "df = gridsizes_ds.aggregate([\"MeshSize\"], [\"metric\", \"time[ms]\"], val=False)\n",
-    "for i, m in df.groupby(\"MeshSize\", as_index=False):\n",
-    "    print(i)\n",
-    "    m[\"duration\"] = m[\"time[ms]\"].cumsum()\n",
-    "    print(m[\"duration\"])\n",
-    "    break"
+    "gomea = {}\n",
+    "gomea_partial = {}\n",
+    "\n",
+    "for group, runs in gridsizes_ds.groupby([\"OptimizerName\", \"MeshSize\"]):\n",
+    "    print(group)\n",
+    "    print(runs[0].resolutions_train[0])\n",
+    "    break\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(6, 6, 6): [68885489.30000001],\n",
+       " (5, 5, 5): [788861.7000000001],\n",
+       " (2, 2, 2): [30141215.1],\n",
+       " (7, 7, 7): [7819180.4],\n",
+       " (3, 3, 3): [3211448.5],\n",
+       " (4, 4, 4): [196097772.6]}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gomea"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = gridsizes_ds.aggregate([\"OptimizerName\", \"MeshSize\"], [\"metric\", \"time[ms]\"], val=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      145048.5\n",
+       "1      136841.6\n",
+       "2      137521.2\n",
+       "3      138993.7\n",
+       "4      137903.5\n",
+       "         ...   \n",
+       "495     60507.7\n",
+       "496     58914.6\n",
+       "497     58660.9\n",
+       "498     58989.9\n",
+       "499     59256.5\n",
+       "Name: time[ms], Length: 500, dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1 = df2.loc[df2[\"OptimizerName\"] == \"GOMEA\"]\n",
+    "t1.loc[t1[\"MeshSize\"] == \"(2, 2, 2)\"][\"time[ms]\"]"
    ]
   },
   {
@@ -103,6 +186,135 @@
    ],
    "source": [
     "df.loc[df[\"MeshSize\"] == '(6, 6, 6)'][\"time[ms]\"].cumsum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>metric</th>\n",
+       "      <th>time[ms]</th>\n",
+       "      <th>OptimizerName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.36031</td>\n",
+       "      <td>1088280.1</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.36031</td>\n",
+       "      <td>371407.9</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.30005</td>\n",
+       "      <td>376467.5</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.003155</td>\n",
+       "      <td>378664.0</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.290246</td>\n",
+       "      <td>381142.5</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>0.118425</td>\n",
+       "      <td>1566.4</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>0.118425</td>\n",
+       "      <td>1581.3</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>0.118423</td>\n",
+       "      <td>1576.4</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>0.118422</td>\n",
+       "      <td>1567.7</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>0.118422</td>\n",
+       "      <td>1561.9</td>\n",
+       "      <td>GOMEA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2927 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       metric   time[ms] OptimizerName\n",
+       "0     2.36031  1088280.1         GOMEA\n",
+       "1     2.36031   371407.9         GOMEA\n",
+       "2     2.30005   376467.5         GOMEA\n",
+       "3    2.003155   378664.0         GOMEA\n",
+       "4    1.290246   381142.5         GOMEA\n",
+       "..        ...        ...           ...\n",
+       "495  0.118425     1566.4         GOMEA\n",
+       "496  0.118425     1581.3         GOMEA\n",
+       "497  0.118423     1576.4         GOMEA\n",
+       "498  0.118422     1567.7         GOMEA\n",
+       "499  0.118422     1561.9         GOMEA\n",
+       "\n",
+       "[2927 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1"
    ]
   },
   {
